fix: no need to stop scrolling when 'add agent' component is open. position: fixed solves the issue of not blurring the entire screen during the process.

--- a/src/pages/create-agent/addagent.module.css
+++ b/src/pages/create-agent/addagent.module.css
@@ -1,5 +1,5 @@
 .agentFormWrapper{
-    position: absolute;
+    position: fixed;
     width: 50%;
     top: 50%;
     left: 50%;
@@ -35,7 +35,7 @@
 }
 
 .outline{
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     backdrop-filter: blur(2px) brightness(70%);
